objects/Service_Quote__c.object
<CustomObject>
    <fields>
        <fullName>GP__c</fullName>
        <label>GP%</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Cost__c</fullName>
        <label>Service Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_GP__c</fullName>
        <label>Service GP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Service Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Service Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>